--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Marcos Ferreira - A JavaScript Full Stack developer</title>
+  <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
   <h1>Marcos Ferreira</h1>
