--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Marcos Ferreira - A JavaScript Full Stack developer</title>
+  <link rel="shortcut icon" href="https://cdn.afterdawn.fi/v3/news/original/github-logo.png" type="image/x-icon">
   <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
+
 <body>
-  <h1>Marcos Ferreira</h1>
+  <header>
+    <div class="profile">
+      <img src="./assets/img/marcosferreira-github.jpg" alt="Marcos Ferreira">
+    </div>
+
+    <div class="title">
+      <h1>Marcos Ferreira</h1>
+      <h3>A JavaScript Full Stack developer</h3>
+    </div>
+  </header>
+
+  <main>
+    <div class="profile-github">
+      <a href="https://github.com/marcosferreira" target="_blank">
+        <img src="https://cdn.afterdawn.fi/v3/news/original/github-logo.png" alt="https://github.com/marcosferreira">/marcosferreira
+      </a>
+      <a href="https://github.com/marcostack" target="_blank">
+        <img src="https://cdn.afterdawn.fi/v3/news/original/github-logo.png" alt="https://github.com/marcostack">/marcostack
+      </a>
+    </div>
+  </main>
 </body>
+
 </html>
