update layout and add projects in portfolio

--- a/index.html
+++ b/index.html
@@ -17,18 +17,80 @@
 
     <div class="title">
       <h1>Marcos Ferreira</h1>
-      <h3>A JavaScript Full Stack developer</h3>
+      <h3>A JavaScript full-stack developer</h3>
     </div>
   </header>
 
   <main>
     <div class="profile-github">
       <a href="https://github.com/marcosferreira" target="_blank">
-        <img src="https://cdn.afterdawn.fi/v3/news/original/github-logo.png" alt="https://github.com/marcosferreira">/marcosferreira
+        <img src="assets/img/github-logo.png" alt="https://github.com/marcosferreira">/marcosferreira
       </a>
+
       <a href="https://github.com/marcostack" target="_blank">
-        <img src="https://cdn.afterdawn.fi/v3/news/original/github-logo.png" alt="https://github.com/marcostack">/marcostack
+        <img src="assets/img/github-logo.png" alt="https://github.com/marcostack">/marcostack
       </a>
+    </div>
+
+    <div class="portfolio">
+      <h1>Portifólio</h1>
+
+      <div class="card-group">
+        <div class="card">
+          <div class="card-header">
+            <img src="assets/img/projects-img/netflix-clone.png" alt="netflix-clone">
+            <h3>Netflix Clone</h3>
+          </div>
+          <div class="card-footer">
+            <a href="https://marcosferreira.github.io/netflix-web" target="_blank">Demonstração</a>
+            <a href="https://github.com/marcosferreira/netflix-web" target="_blank">Link do projeto</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-header">
+            <img src="assets/img/projects-img/nnlanches-web.png" alt="netflix-clone">
+            <h3>NNLanches</h3>
+          </div>
+          <div class="card-footer">
+            <a href="https://marcosferreira.github.io/nnlanches-web" target="_blank">Demonstração</a>
+            <a href="https://github.com/marcosferreira/nnlanches-web" target="_blank">Link do projeto</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-header">
+            <img src="assets/img/projects-img/site-pmdonaines.png" alt="site-prefeitura-dona-ines">
+            <h3>Prefeitura de Dona Inês</h3>
+          </div>
+          <div class="card-footer">
+            <a href="http://pmdonaines.pb.gov.br" target="_blank">Demonstração</a>
+            <a href="#" target="_blank">Link do projeto</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-header">
+            <img src="assets/img/projects-img/site-coegemaspb.png" alt="site-prefeitura-dona-ines">
+            <h3>Prefeitura de Dona Inês</h3>
+          </div>
+          <div class="card-footer">
+            <a href="http://coegemaspb.com.br" target="_blank">Demonstração</a>
+            <a href="#" target="_blank">Link do projeto</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-header">
+            <img src="assets/img/projects-img/site-congesp.png" alt="site-prefeitura-dona-ines">
+            <h3>Congesp</h3>
+          </div>
+          <div class="card-footer">
+            <a href="https://congesp.com.br" target="_blank">Demonstração</a>
+            <a href="#" target="_blank">Link do projeto</a>
+          </div>
+        </div>
+      </div>
     </div>
   </main>
 </body>
