--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Marcos Ferreira - A JavaScript Full Stack developer</title>
+  <title>Marcos Ferreira - A JavaScript full-stack developer</title>
   <link rel="shortcut icon" href="https://cdn.afterdawn.fi/v3/news/original/github-logo.png" type="image/x-icon">
   <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
