fixing title card

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 
         <div class="card">
           <div class="card-header">
-            <img src="assets/img/projects-img/site-coegemaspb.png" alt="site-prefeitura-dona-ines">
-            <h3>Prefeitura de Dona Inês</h3>
+            <img src="assets/img/projects-img/site-coegemaspb.png" alt="site-coegemaspb">
+            <h3>Coegemas PB</h3>
           </div>
           <div class="card-footer">
             <a href="http://coegemaspb.com.br" target="_blank">Demonstração</a>
