--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="title">
       <h1>Marcos Ferreira</h1>
-      <h3>A JavaScript full-stack developer</h3>
+      <h3>JavaScript Developer</h3>
     </div>
   </header>
 
