--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#000000" />
 
-  <title>Marcos Ferreira - A JavaScript full-stack developer</title>
+  <title>Marcos Ferreira - JavaScript Developer</title>
 
   <link rel="shortcut icon" href="https://cdn.afterdawn.fi/v3/news/original/github-logo.png" type="image/x-icon">
   <link rel="stylesheet" href="./assets/css/styles.css">
