--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="title">
       <h1>Marcos Ferreira</h1>
-      <h3>Cross Plataform Developer (Flutter)</h3>
+      <h3>Software Developer</h3>
     </div>
   </header>
 
