--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <div class="profile">
-      <img src="./assets/img/marcosferreira.jpg" alt="Marcos Ferreira">
+      <img src="https://github.com/marcosferreira.png" alt="Marcos Ferreira">
     </div>
 
     <div class="title">
