Enhance CV layout and content; add CV page, update index links, and improve styles

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <a href="https://github.com/marcosferreira" target="_blank" class="btn btn-outline-light">
                 <i class="fab fa-github me-2"></i>GitHub
               </a>
-              <a href="#" class="btn btn-primary">
+              <a href="cv.html" target="_blank" class="btn btn-primary">
                 <i class="fas fa-download me-2"></i>Download CV
               </a>
             </div>
@@ -77,8 +77,8 @@
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
           <h2 class="mb-4">Sobre Mim</h2>
-          <p class="lead">Sou um desenvolvedor de software com experiência em desenvolvimento web e aplicativos.</p>
-          <p>Com habilidades em Python, Django, Flask, PHP, JavaScript, TypeScript, HTML, CSS, React, Node.js, MongoDB, PostgreSQL, MySQL, Git, Docker, Linux, AWS, Azure e GCP, busco criar soluções eficientes e intuitivas.</p>
+          <p class="lead">Sou um desenvolvedor Fullstack com experiência em desenvolvimento web e aplicações mobile.</p>
+          <p>Graduado em Análise e Desenvolvimento de Sistemas pela UNOPAR (2022-2024), trabalho como desenvolvedor freelancer desde 2018, desenvolvendo sites institucionais, aplicativos mobile e sistemas web utilizando diversas tecnologias.</p>
           <div class="mt-4">
             <h4 class="mb-3">Minhas Habilidades</h4>
             <div class="d-flex flex-wrap justify-content-center gap-2">
@@ -92,6 +92,8 @@
               <span class="badge bg-primary p-2">CSS</span>
               <span class="badge bg-primary p-2">React</span>
               <span class="badge bg-primary p-2">Node.js</span>
+              <span class="badge bg-primary p-2">Flutter</span>
+              <span class="badge bg-primary p-2">Dart</span>
               <span class="badge bg-primary p-2">MongoDB</span>
               <span class="badge bg-primary p-2">PostgreSQL</span>
               <span class="badge bg-primary p-2">MySQL</span>
@@ -100,7 +102,7 @@
               <span class="badge bg-primary p-2">Linux</span>
               <span class="badge bg-primary p-2">AWS</span>
               <span class="badge bg-primary p-2">Azure</span>
-              <span class="badge bg-primary p-2">GCP</span>
+              <span class="badge bg-primary p-2">Firebase</span>
             </div>
           </div>
         </div>
@@ -367,13 +369,13 @@
             <a href="https://github.com/marcosferreira" target="_blank" class="text-white">
               <i class="fab fa-github fa-lg"></i>
             </a>
-            <a href="#" target="_blank" class="text-white">
+            <a href="https://www.linkedin.com/in/marcosferreira-dev/" target="_blank" class="text-white">
               <i class="fab fa-linkedin fa-lg"></i>
             </a>
-            <a href="#" target="_blank" class="text-white">
+            <a href="https://x.com/marcosdev_" target="_blank" class="text-white">
               <i class="fab fa-twitter fa-lg"></i>
             </a>
-            <a href="#" target="_blank" class="text-white">
+            <a href="https://www.instagram.com/marcosferreira.dev/" target="_blank" class="text-white">
               <i class="fab fa-instagram fa-lg"></i>
             </a>
           </div>
