--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
           <div class="col-lg-8">
             <div class="card shadow-sm">
               <div class="card-body p-4">
-                <form>
+                <form id="whatsappForm" onsubmit="return sendWhatsApp(event)">
                   <div class="row g-3">
                     <div class="col-md-6">
                       <label for="nome" class="form-label">Nome</label>
@@ -311,7 +311,9 @@
                       <textarea class="form-control" id="mensagem" rows="4" required></textarea>
                     </div>
                     <div class="col-12 mt-4">
-                      <button type="submit" class="btn btn-primary w-100">Enviar Mensagem</button>
+                      <button type="submit" class="btn btn-primary w-100">
+                        <i class="fab fa-whatsapp me-2"></i>Enviar via WhatsApp
+                      </button>
                     </div>
                   </div>
                 </form>
