Adjust global font size to 0.9rem for improved readability in CV

--- a/cv.html
+++ b/cv.html
@@ -89,6 +89,10 @@
         size: A4; /* Define o tamanho como A4 */
       }
       
+      * {
+        font-size: 0.9rem;
+      }
+      
       body {
         background-color: white;
         margin: 0;
