feat: enhance styling and interactivity across the portfolio
- Updated CSS for a modern design with new color palette, shadows, and transitions.
- Implemented glassmorphism effects in the navbar and improved header section.
- Added animations for elements on scroll and hover effects for cards.
- Introduced smooth scrolling for internal links and lazy loading for images.
- Enhanced JavaScript functionality with scroll animations, navbar effects, and counters.
- Improved accessibility features and responsive design adjustments.
- Minor content update in the "Sobre Mim" section for clarity.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="col-lg-8 mx-auto text-center">
           <h2 class="mb-4">Sobre Mim</h2>
           <p class="lead">Sou um desenvolvedor Fullstack com experiência em desenvolvimento web e aplicações mobile.</p>
-          <p>Graduado em Análise e Desenvolvimento de Sistemas pela UNOPAR (2022-2024), trabalho como desenvolvedor freelancer desde 2018, desenvolvendo sites institucionais, aplicativos mobile e sistemas web utilizando diversas tecnologias.</p>
+          <p>Graduado em Análise e Desenvolvimento de Sistemas pela UNOPAR, trabalho como desenvolvedor freelancer, desenvolvendo sites institucionais, aplicativos mobile e sistemas web utilizando diversas tecnologias.</p>
           <div class="mt-4">
             <h4 class="mb-3">Minhas Habilidades</h4>
             <div class="d-flex flex-wrap justify-content-center gap-2">
